# weather-stream-processing

./: README.md  pyproject.toml
src/main/python/weather_streaming/: config.py
src/main/python/weather_streaming/services/metrics_consumer/: Dockerfile  main.py
src/main/python/weather_streaming/services/metrics_producer/: Dockerfile  main.py
src/resources/k8s/app/: 01-producer.yml  02-consumer.yml
src/resources/k8s/kafka/: 01-kafka.yml
